--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,94 @@
-h2:{
 
-  color:red;
-  font-size:20px;
-  font-family: sans-serif;
-  margin-bottom:10px;
-
+* {
+  box-sizing: border-box;
 }
 
-button:{
-  color:lightblue;
-  font-size: 12px;
-  margin-left:10px;
-  padding: 5px;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 
 
 }
 
-ul:{
-  list-style-type:none;
-  margin-bottom:5px;
+.sidenav {
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
 }
+
+
+
+.sidenav a {
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.sidenav a:hover {
+  background-color: #ddd;
+  color: black;
+
+}
+
+
+.content {
+  margin-left: 250px;
+  padding-left: 20px;
+text-align: left;
+
+
+}
+
+/*some of the above design is from W3School*/
+
+.list1{list-style-type:none;
+    border-style: solid;
+    border-color: black;
+    border-radius: 100px;
+    margin-right: 30px;
+    margin-top: 50px;、
+    padding-right: 100px;
+    padding-right: 100PX;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: left;
+    }
+
+
+
+.footer{
+  background-color: #111;
+    color:white;
+  padding: 10px;
+    margin-left:none;
+  text-align: center;
+
+
+}
+    h2{margin-bottom: 20px;
+color: mediumvioletred;}
+
+.main{background-color: aliceblue;}
+
+#margin{margin-bottom: 100px;}
+
+.list2{list-style-type:none;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    padding: 15px;
+    margin:30px;
+    text-align: left;
+    }
+
+}
+
+
+  
