--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,8 @@ color: mediumvioletred;}
     }
 
 }
+table{border-style-button: solid;
+border-color:black;
+}
 
-
-  
+button{background-color: black;}
