--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,17 +89,27 @@ color: mediumvioletred;}
     }
 
 }
-.table{border-style-button: solid;
-border-bottom-color:black;
-margin-left: 10px;
-}
 
 button{background-color: black;
 color:whitesmoke;}
 
-.form{
-  margin: 20px;
-  text-align: RIGHT;
-  
+.divm{
+  margin:10px;
+  text-align: left;
+  padding-left: 100px;
+}
 
+form{
+  background-color: aliceblue;
+  color: black;
+  padding-top:50PX;
+  padding-bottom: 20PX;
+  text-align: center;
+  border-style: solid;
+  border-color: black
+}
+table{
+  border-style: solid;
+  border-color: black
+  text-align:center;
 }
